--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Main2Activity">
 
         </activity>
-        <activity android:name=".Main2Activity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".SplashScreen">
 
             <intent-filter>
